--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,15 @@
   "icons": {
     "48": "icons/logo-48.png"
   },
-
   "background": {
     "scripts": ["background.js"]
   },
-
   "browser_action": {
-    "default_icon": "icons/logo-32.png"
-  }
-
+    "default_icon": "icons/logo-32.png",
+    "default_title": "Alephium",
+    "default_popup": "index.html"
+  },
+  "permissions": [
+    "storage"
+  ]
 }
