Add `README` and build steps in `package.json`, remove `build.sh`.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron-dev": "ELECTRON_START_URL=http://localhost:3000 electron .",
-    "electron-pack": "npm run-script build && npx electron-builder"
+    "electron-pack": "npm run-script build && npx electron-builder",
+    "extension-build": "rm -rf build; INLINE_RUNTIME_CHUNK=false npm run-script build;  cp -R public/background.js icons manifest.json build",
+    "extension-pack": "npm run-script extension-build && cd build && zip -r ../alephium-webextension.zip *"
   },
   "build": {
     "appId": "org.alephium.alephium-webextension",
