Clean deliverable when packaging extension.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "electron-dev": "ELECTRON_START_URL=http://localhost:3000 electron .",
     "electron-pack": "npm run-script build && npx electron-builder",
     "extension-build": "rm -rf build; INLINE_RUNTIME_CHUNK=false npm run-script build;  cp -R public/background.js icons manifest.json build",
-    "extension-pack": "npm run-script extension-build && cd build && zip -r ../alephium-webextension.zip *"
+    "extension-pack": "rm ../alephium-webextension.zip; npm run-script extension-build && cd build && zip -r ../alephium-webextension.zip *"
   },
   "build": {
     "appId": "org.alephium.alephium-webextension",
