Add linux `deb` icons and specific settings.

--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     ],
     "linux": {
       "category": "Finance",
+      "executableName": "alephium",
       "target": [
         "AppImage",
         "deb"
-      ]
+      ],
+      "icon": "icons/512x512.png"
     },
     "productName": "Alephium",
     "directories": {
