--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "alephium-webextension",
   "version": "0.1.0",
   "private": true,
-  "author": "Cheng Wang <cheng@alephium.org>",
+  "author": "Alephium <info@alephium.org>",
   "homepage": "./",
   "main": "public/electron.js",
   "dependencies": {
