--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "public/electron.js",
   "dependencies": {
     "@material-ui/core": "^4.9.8",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "alf-client": "../alephium-client/",
