Replace mock data with transactions with call to explorer.
Also add link to alephscan for transaction details.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "alf-client": "../alephium-client/",
+    "bcurl": "~0.1.6",
+    "keccakjs": "^0.2.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
