Add password strength validation during registration.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "electron": "^7.1.7",
