Validate mnemonic durincg import using bip39.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^9.3.2",
     "alf-client": "../alephium-client/",
     "bcurl": "~0.1.6",
+    "bip39": "^3.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
