--- a/package.json
+++ b/package.json
@@ -11,16 +11,25 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "alf-client": "../alephium-js/",
     "bcurl": "~0.1.6",
     "bip39": "^3.0.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-is": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "styled-components": "^5.2.3",
+    "typescript": "^4.2.3",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
     "electron": "^7.1.7",
     "electron-builder": "^22.7.0"
   },
