--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "homepage": "./",
   "main": "public/electron.js",
   "dependencies": {
-    "@material-ui/core": "^4.9.8",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@types/jest": "^26.0.22",
@@ -16,10 +16,10 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "alf-client": "../alephium-js/",
-    "bcurl": "~0.1.6",
-    "bip39": "^3.0.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "bcurl": "^0.1.9",
+    "bip39": "^3.0.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-is": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
@@ -30,8 +30,8 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
-    "electron": "^7.1.7",
-    "electron-builder": "^22.7.0"
+    "electron": "^7.3.3",
+    "electron-builder": "^22.10.5"
   },
   "scripts": {
     "start": "react-scripts start",
