--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "alf-client": "../alephium-js/",
     "bcurl": "^0.1.9",
     "bip39": "^3.0.3",
+    "framer-motion": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.1",
     "styled-components": "^5.2.3",
     "typescript": "^4.2.3",
     "zxcvbn": "^4.4.2"
