--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.1",
     "styled-components": "^5.2.3",
+    "tinycolor2": "^1.4.2",
     "typescript": "^4.2.3",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
+    "@types/tinycolor2": "^1.4.2",
     "electron": "^7.3.3",
     "electron-builder": "^22.10.5"
   },
