--- a/package.json
+++ b/package.json
@@ -11,10 +11,6 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
     "alf-client": "../alephium-js/",
     "bcurl": "^0.1.9",
     "bip39": "^3.0.3",
@@ -26,7 +22,6 @@
     "react-scripts": "^4.0.1",
     "styled-components": "^5.2.3",
     "tinycolor2": "^1.4.2",
-    "typescript": "^4.2.3",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
@@ -37,7 +32,12 @@
     "electron-builder": "^22.10.5",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.2.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.3",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
