--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-is": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.1",
