--- a/package.json
+++ b/package.json
@@ -26,19 +26,20 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
     "@types/tinycolor2": "^1.4.2",
+    "@types/zxcvbn": "^4.4.1",
     "electron": "^7.3.3",
     "electron-builder": "^22.10.5",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.2.0",
     "prettier": "^2.2.1",
-    "typescript": "^4.2.3",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3"
+    "typescript": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
