--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/styled-components": "^5.1.9",
     "@types/tinycolor2": "^1.4.2",
     "@types/zxcvbn": "^4.4.1",
+    "classnames": "^2.3.1",
     "electron": "^7.3.3",
     "electron-builder": "^22.10.5",
     "eslint-config-prettier": "^6.15.0",
