--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "electron-builder": "^22.10.5",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   },
