Setup contexts for easier transfer of global data (wallet etc.)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
-    "alf-client": "../alephium-js/",
+    "alf-client": "../alephium-js",
     "bcurl": "^0.1.9",
     "bip39": "^3.0.3",
     "framer-motion": "^4.1.2",
