--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
   "homepage": "./",
   "main": "public/electron.js",
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "alf-client": "../alephium-js",
@@ -16,7 +13,6 @@
     "framer-motion": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
     "react-is": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.1",
@@ -41,7 +37,9 @@
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.15.11",
     "prettier": "^2.2.1",
+    "type-fest": "^1.0.2",
     "typescript": "^4.2.3"
   },
   "scripts": {
