--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^26.0.22",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.37",
+    "@types/qrcode.react": "^1.0.1",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
@@ -39,6 +40,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.15.11",
     "prettier": "^2.2.1",
+    "qrcode.react": "^1.0.1",
     "type-fest": "^1.0.2",
     "typescript": "^4.2.3"
   },
