--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bip39": "^3.0.3",
     "framer-motion": "^4.1.2",
     "react": "^17.0.2",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
     "react-is": "^16.13.1",
     "react-router-dom": "^5.1.2",
