--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
+    "@yaireo/tagify": "^4.1.3",
     "alf-client": "../alephium-js",
     "bip39": "^3.0.3",
     "framer-motion": "^4.1.2",
@@ -31,6 +32,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
     "@types/tinycolor2": "^1.4.2",
+    "@types/yaireo__tagify": "^4.1.0",
     "@types/zxcvbn": "^4.4.1",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.4",
