--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-unused-imports": "^1.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.15.11",
     "prettier": "^2.2.1",
