--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.6",
     "@types/jest": "^26.0.22",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.37",
