Refactor styling / layout for extension And check that extension is actually compiling properly and working in chrome as intended.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
-  "description": "Web Extension for Alephium",
+  "description": "Alephium Wallet Extension",
   "manifest_version": 2,
   "name": "alephium",
-  "version": "0.3",
+  "version": "1.0",
   "homepage_url": "https://gitlab.com/alephium/alephium-webextension",
   "icons": {
     "48": "icons/logo-48.png"
@@ -15,8 +15,5 @@
     "default_title": "Alephium",
     "default_popup": "index.html"
   },
-  "permissions": [
-    "storage"
-  ],
-  "manifest_version": 2
+  "permissions": ["storage"]
 }
