--- a/package.json
+++ b/package.json
@@ -2,28 +2,40 @@
   "name": "alephium-wallet",
   "version": "1.0.0",
   "private": true,
-  "author": "Alephium <info@alephium.org>",
   "homepage": "./",
+  "author": "Alephium <info@alephium.org>",
   "main": "public/electron.js",
+  "scripts": {
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "electron-dev": "concurrently \"BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-pack": "npm run build && npx electron-builder",
+    "extension-build": "rm -rf build; INLINE_RUNTIME_CHUNK=false npm run-script build;  cp public/background.js public/manifest.json build",
+    "extension-pack": "rm ../alephium-webextension.zip; npm run-script extension-build && cd build && zip -r ../alephium-webextension.zip *",
+    "start": "react-scripts start",
+    "test": "react-scripts test"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@yaireo/tagify": "^4.1.3",
-    "alf-client": "../alephium-js",
-    "bip39": "^3.0.3",
-    "framer-motion": "^4.1.2",
-    "react": "^17.0.2",
-    "react-confetti": "^6.0.1",
-    "react-dom": "^17.0.2",
-    "react-is": "^16.13.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.1",
-    "styled-components": "^5.2.3",
-    "tinycolor2": "^1.4.2",
-    "zxcvbn": "^4.4.2"
+    "electron-is-dev": "^2.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^9.3.2",
     "@types/jest": "^26.0.22",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.37",
@@ -35,7 +47,11 @@
     "@types/tinycolor2": "^1.4.2",
     "@types/yaireo__tagify": "^4.1.0",
     "@types/zxcvbn": "^4.4.1",
+    "@yaireo/tagify": "^4.1.3",
+    "alf-client": "../alephium-js",
+    "bip39": "^3.0.3",
     "classnames": "^2.3.1",
+    "concurrently": "^6.2.1",
     "dayjs": "^1.10.4",
     "electron": "^7.3.3",
     "electron-builder": "^22.10.5",
@@ -43,22 +59,23 @@
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-unused-imports": "^1.1.1",
+    "framer-motion": "^4.1.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.15.11",
     "prettier": "^2.2.1",
     "qrcode.react": "^1.0.1",
+    "react": "^17.0.2",
+    "react-confetti": "^6.0.1",
+    "react-dom": "^17.0.2",
+    "react-is": "^16.13.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^4.0.1",
+    "styled-components": "^5.2.3",
+    "tinycolor2": "^1.4.2",
     "type-fest": "^1.0.2",
-    "typescript": "^4.2.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "electron-dev": "ELECTRON_START_URL=http://localhost:3000 electron .",
-    "electron-pack": "npm run-script build && npx electron-builder",
-    "extension-build": "rm -rf build; INLINE_RUNTIME_CHUNK=false npm run-script build;  cp public/background.js public/manifest.json build",
-    "extension-pack": "rm ../alephium-webextension.zip; npm run-script extension-build && cd build && zip -r ../alephium-webextension.zip *"
+    "typescript": "^4.2.3",
+    "wait-on": "5.3.0",
+    "zxcvbn": "^4.4.2"
   },
   "build": {
     "appId": "org.alephium.alephium-webextension",
@@ -79,20 +96,5 @@
     "directories": {
       "buildResources": "assets"
     }
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   }
 }
