--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,12 +87,22 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         if: startsWith(matrix.os, 'macos')
-      - name: Upload release assets (linux)
+      - name: Upload release assets (linux .deb)
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ needs.release.outputs.upload-url }}
           asset_path: dist/alephium-wallet_${{ needs.release.outputs.version }}_amd64.deb
           asset_name: alephium-wallet-linux-amd64-${{ needs.release.outputs.version }}.deb
+          asset_content_type: application/octet-stream
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: startsWith(matrix.os, 'ubuntu')
+      - name: Upload release assets (linux AppImage)
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ needs.release.outputs.upload-url }}
+          asset_path: dist/Alephium-${{ needs.release.outputs.version }}.AppImage
+          asset_name: alephium-wallet-linux-${{ needs.release.outputs.version }}.AppImage
           asset_content_type: application/octet-stream
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
