--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "author": "Alephium dev <dev@alephium.org>",
   "main": "public/electron.js",
   "scripts": {
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
+    "build": "REACT_APP_VERSION=$npm_package_version INLINE_RUNTIME_CHUNK=false react-scripts build",
     "electron-dev": "concurrently \"BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-pack": "npm run build && npx electron-builder",
     "electron-pack-windows": "npm run build && npx electron-builder -w",
@@ -15,7 +14,7 @@
     "electron-pack-ubuntu": "npm run build && npx electron-builder -l",
     "extension-build": "rm -rf build; INLINE_RUNTIME_CHUNK=false npm run-script build;  cp public/background.js public/manifest.json build",
     "extension-pack": "rm alephium-wallet.zip; npm run-script extension-build && cd build && zip -r ../alephium-wallet.zip *",
-    "start": "react-scripts start",
+    "start": "REACT_APP_VERSION=$npm_package_version react-scripts start",
     "test": "react-scripts test"
   },
   "browserslist": {
