--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,7 +72,7 @@ jobs:
           node-version: '14.x'
       - name: Build the desktop wallet
         run: |
-          npm install
+          npm ci
           npm run-script electron-pack-${{ steps.get-os.outputs.os }}
         shell: bash
         env:
