Update electron-builder to support universal MacOS build

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "electron-dev": "concurrently \"BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-pack": "npm run build && npx electron-builder",
     "electron-pack-windows": "npm run build && npx electron-builder -w",
-    "electron-pack-macos": "npm run build && npx electron-builder -m",
+    "electron-pack-macos": "npm run build && npx electron-builder --mac --universal",
     "electron-pack-ubuntu": "npm run build && npx electron-builder -l",
     "extension-build": "rm -rf build; INLINE_RUNTIME_CHUNK=false npm run-script build;  cp public/background.js public/manifest.json build",
     "extension-pack": "rm alephium-wallet.zip; npm run-script extension-build && cd build && zip -r ../alephium-wallet.zip *",
@@ -59,7 +59,7 @@
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.7",
     "electron": "^15.0.0",
-    "electron-builder": "^22.11.7",
+    "electron-builder": "^22.13.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react-hooks": "^4.2.0",
