--- a/package.json
+++ b/package.json
@@ -99,7 +99,8 @@
     "productName": "Alephium",
     "directories": {
       "buildResources": "assets"
-    }
+    },
+    "afterPack": ".afterPack.js"
   },
   "engines": {
     "node": ">=12.0.0"
