--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "electron-pack-windows": "npm run build && npx electron-builder -w",
     "electron-pack-macos": "npm run build && npx electron-builder --mac --universal",
     "electron-pack-ubuntu": "npm run build && npx electron-builder -l",
-    "extension-build": "rm -rf build; INLINE_RUNTIME_CHUNK=false npm run-script build;  cp public/background.js public/manifest.json build",
-    "extension-pack": "npm run-script extension-build && web-ext build --source-dir=build --artifacts-dir=. --filename=alephium-wallet.zip --overwrite-dest",
+    "extension-build": "shx rm -rf build && npm run build && shx cp public/background.js public/manifest.json build",
+    "extension-pack": "npm run extension-build && web-ext build --source-dir=build --artifacts-dir=. --filename=alephium-wallet.zip --overwrite-dest",
     "start": "cross-env REACT_APP_VERSION=$npm_package_version react-scripts start",
     "test": "react-scripts test",
     "lint": "eslint . --ext .ts,.tsx",
@@ -75,6 +75,7 @@
     "react-is": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "shx": "^0.3.3",
     "styled-components": "^5.3.1",
     "tinycolor2": "^1.4.2",
     "type-fest": "^2.3.4",
