--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "afterPack": ".afterPack.js"
   },
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=14.18.1",
+    "npm": ">=7.24.2"
   }
 }
