--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^1.1.4",
     "framer-motion": "^4.1.17",
     "lodash": "^4.17.21",
