--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "electron": "^15.0.0",
     "electron-builder": "^22.13.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
