--- a/package.json
+++ b/package.json
@@ -68,11 +68,11 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.16.0",
     "prettier": "^2.4.1",
-    "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
+    "react-qr-code": "^2.0.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "shx": "^0.3.3",
