--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "extension-build": "shx rm -rf build && npm run build && shx cp public/background.js public/manifest.json build",
     "extension-pack": "npm run extension-build && web-ext build --source-dir=build --artifacts-dir=. --filename=alephium-wallet.zip --overwrite-dest",
     "start": "cross-env REACT_APP_VERSION=$npm_package_version REACT_APP_CSP=\"script-src 'self' 'unsafe-inline'\" react-scripts start",
-    "test": "react-scripts test",
+    "test": "react-scripts test --silent",
     "lint": "eslint . --ext .ts,.tsx --max-warnings=0",
     "lint:fix": "eslint . --fix --ext .ts,.tsx",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
