--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/node": "^16.9.6",
     "@types/qrcode.react": "^1.0.2",
     "@types/react": "^17.0.24",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.0",
     "@types/styled-components": "^5.1.14",
@@ -69,7 +70,9 @@
     "lucide-react": "^0.16.0",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-confetti": "^6.0.1",
+    "react-detect-click-outside": "^1.1.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-qr-code": "^2.0.3",
