--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.173",
     "@types/node": "^16.9.6",
-    "@types/qrcode.react": "^1.0.2",
     "@types/react": "^17.0.24",
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "^17.0.9",
@@ -78,6 +77,7 @@
     "react-qr-code": "^2.0.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "react-tooltip": "^4.2.21",
     "shx": "^0.3.3",
     "styled-components": "^5.3.1",
     "tinycolor2": "^1.4.2",
