--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "dayjs": "^1.10.7",
     "electron": "^15.0.0",
     "electron-builder": "^22.13.1",
+    "electron-devtools-installer": "^3.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-prettier": "^4.0.0",
