--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,4 @@
 contact_links:
   - name: 🤔 Questions and Help
-    url: https://discord.com/channels/747741246667227157/883355707146141737
+    url: https://discord.gg/dT3hDTtABD
     about: This issue tracker is not for support questions. Please refer to the Alephium community's Discord.
