--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
           git push origin HEAD:master
 
   build-artifacts:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     needs: bump-npm-version
     outputs:
       version: ${{ needs.bump-npm-version.outputs.version }}
