--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     ]
   },
   "dependencies": {
+    "@json-rpc-tools/utils": "^1.7.6",
+    "@walletconnect/client": "^2.0.0-beta.26",
+    "@walletconnect/utils": "^2.0.0-beta.26",
     "electron-context-menu": "^3.1.2",
     "electron-is-dev": "^2.0.0"
   },
