--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alephium-wallet",
   "description": "The official Alephium wallet",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "homepage": "./",
   "author": "Alephium dev <dev@alephium.org>",
   "main": "public/electron.js",
@@ -38,6 +38,7 @@
     "electron-is-dev": "^2.0.0"
   },
   "devDependencies": {
+    "@alephium/sdk": "0.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
     "@types/jest": "^27.0.2",
@@ -52,7 +53,6 @@
     "@types/yaireo__tagify": "^4.7.0",
     "@types/zxcvbn": "^4.4.1",
     "@yaireo/tagify": "^4.8.0",
-    "alephium-js": "1.2.0-rc0",
     "bip39": "^3.0.4",
     "classnames": "^2.3.1",
     "concurrently": "^6.2.1",
