--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@json-rpc-tools/utils": "^1.7.6",
     "@walletconnect/client": "^2.0.0-beta.26",
     "@walletconnect/utils": "^2.0.0-beta.26",
+    "alephium-walletconnect-provider": "0.0.4",
+    "alephium-web3": "^0.5.0",
     "electron-context-menu": "^3.1.2",
     "electron-is-dev": "^2.0.0"
   },
