--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-qr-code": "^2.0.3",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
     "react-tooltip": "^4.2.21",
