--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/tinycolor2": "^1.4.3",
     "@types/yaireo__tagify": "^4.7.0",
     "@types/zxcvbn": "^4.4.1",
+    "@walletconnect/types": "^2.0.0-beta.100",
     "@yaireo/tagify": "^4.8.0",
     "bip39": "^3.0.4",
     "classnames": "^2.3.1",
